# nsfw-finder

./: .gitignore  Cargo.toml
.github/workflows/: download-model.yml  release.yml
src/: main.rs
